--- a/temp.org
+++ b/temp.org
@@ -1,9 +1,6 @@
-   .logo{
-            display:block;
-            margin: 0px auto;
-            padding:70px;
-            margin-top:50px;
-            width:300px;
-            length: 50px;
-        }
-<img src="Images/Google.jpg" class="logo">
+/* NAVIGATION BAR AT ADVANCED SEARCH */
+nav {
+    margin: 5px;
+    display: flex;  /* By default, the flex-direction is set to row. */
+    justify-content: space-between; /* Used to align the flex items. */
+}
