--- a/Original Code/search.org
+++ b/Original Code/search.org
@@ -7,6 +7,13 @@
         <link rel="icon" href="./Images/logo.png">
         <link rel="stylesheet" href="styles.css">
 
+
+    <style>
+        .rot180:before {
+            transform: rotate(180deg); 
+        }
+    </style>
+
     </head>
     <body>
 
@@ -18,29 +25,31 @@
             <a href="advanced.html"]>
                 Google Advanced Search
             </a>
-            <br>
-            <a href="base.html"] 
-                color=blue;>
-                Footer
-            </a>
         </div>
 
         <section>
-            <h1><span style="color: #4285F4;">G</span><span style="color: #DB4437;">o</span><span style="color: #F4B400;">o</span><span style="color: #4285F4">g</span><span style="color: #0F9D58;">l</span><span id="e" style="color: #DB4437;">e</span></h1>
-            </h1>
+            <div class="logo-chars">
+                <h1><span style="color: #4285F4;">G</span><span style="color: #DB4437;">o</span><span style="color: #F4B400;">o</span><span style="color: #4285F4">g</span><span style="color: #0F9D58;">l</span><span id="e" style="color:#DB4437">e</span></h1>
+            </div>
 
             <div class="textbox">
                 <form action="https://google.com/search">
-                <input type="text" name="q">
-                </form>     
-            </div>  
-                    <div class="buttons">
-                        <input type="submit" value="Google Search">
-                        <input type="submit" value="I'm Feeling Lucky">
+                    <div>
+                        <input  type="text" 
+                                name="q" 
+                                onfocus="this.value=''"/ 
+                                style="background-image: url(./Images/search-icon.png); 
+                                    background-repeat: no-repeat; 
+                                    padding-left: 20px; "/>
                     </div>
+                </form>     
+            </div> 
+            
+            <div class="buttons">
+                <input type="submit" value="Google Search">
+                <input type="submit" value="I'm Feeling Lucky">
+             </div>
         </section>
-
-        
         
         <footer>
             <nav id="footer-country">
@@ -68,6 +77,6 @@
 
 
 
-<img src="./Images/microphone.png" alt="microphone">
-<img src="./Images/search-icon.png" alt="search-icon">
+<img src="./Images/microphone.png">
+<img src="./Images/search-icon.png">
 
